# panelFormer3

./: .gitignore  ReadMe.md  Train.md  create_dummy_dataset.py  environment.yaml  garment_segmentation.py  main.bak.py  main.py  pyproject.toml  requirements.txt  run_local_training.sh  run_test_training.sh  train.sh  visualize_cutting_pattern.py  visualize_panels.py
Factory/: ReadMe.md
Sewformer/: system.json
Sewformer/models/: garment_detr_2d.py
assets/: dress_sleeveless_001.avif
configs/: default.yaml  inference.yaml  train.yaml
core/: local_experiment.py  trainer.py  trainer_backup.py
core/data/: __init__.py  dataset.py  panel_classes.py  pattern_converter.py  wrapper.py
core/metrics/: __init__.py  composed_loss.py  eval_detr_metrics.py  losses.py  metrics.py
core/models/: __init__.py  garment_detr_2d.py
data_configs/: data_split.json
deployment/: techPack.nginx.conf
former/: system.json  train.py  trainer.py
former/configs/: train.bak.yaml  train.yaml
former/data/: dataset.py  panel_classes.py  wrapper.py
inference/: visualize_pattern.py
static/: index.html
train/: train.py  train_local.py
utils/: config_manager.py
utils/pattern/: __init__.py  core.py  wrappers.py
